--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
             <img class="imagem" src="./src/imagens/brook.jpg" alt="Brook">
             
-            <img class="imagem" src="./src/imagens/Jinbe.jpg" alt="Jinbe">
+            <img class="imagem" src="./src/imagens/jinbe.jpg" alt="Jinbe">
         </div>
 
         <div class="conteudo">
